# zephyr

examples/threads/: prj.conf
examples/threads/src/: main.c
samples/power_sequencer/: CMakeLists.txt  Kconfig  prj.conf
samples/power_sequencer/boards/: qemu_riscv32.dts
samples/power_sequencer/src/: main.c
samples/runbmc/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/runbmc/boards/: qemu_riscv32.conf  stm32f4_disco.conf
samples/runbmc/configs/: prj_full.conf  prj_minimal.conf  prj_pldm.conf
samples/runbmc/include/runbmc/core/: bmc.h  platform.h  power.h  sensors.h  telemetry.h  types.h
samples/runbmc/include/runbmc/protocols/: mctp.h  mctp_binding.h
samples/runbmc/src/: main.c
samples/runbmc/src/core/: bmc_core.c  power.c  sensors.c  telemetry.c
samples/runbmc/src/platform/: qemu_riscv.c  stm32f4_disco.c
samples/runbmc/src/protocols/: mctp_core.c  mctp_i2c.c  mctp_uart.c
samples/runbmc/src/shell/: shell_bmc.c  shell_mctp.c
